Update dependencies and build using GitHub actions.